fix(prop-placeholder-color): update focus styles for all components

--- a/app/src/shell/styles/basic_index.sass
+++ b/app/src/shell/styles/basic_index.sass
@@ -10,10 +10,9 @@
 	-webkit-text-size-adjust: none
 	-webkit-tap-highlight-color: transparent
 	word-break: break-word
+	outline-color: #c4d8f7
 	&:after, &:before
 		box-sizing: border-box
-	&:focus
-		outline: none
 
 a
 	text-decoration: none
