--- a/packages/react-components/src/styles/variables.scss
+++ b/packages/react-components/src/styles/variables.scss
@@ -2,6 +2,6 @@
 
 :root {
   @each $name, $value in $palette {
-    --pv-#{$name}: #{$value};
+    --pv-#{$name}: #{red($value), green($value), blue($value)};
   }
 }
