--- a/packages/react-components/src/styles/common/color.scss
+++ b/packages/react-components/src/styles/common/color.scss
@@ -1,5 +1,5 @@
 @each $name, $value in $palette {
-  .color-#{$name} {
+  .color_#{$name} {
     color: rgb(red($value), green($value), blue($value));
     color: rgb(var(--pv-#{$name}));
   }
