--- a/packages/react-components/src/styles/index.scss
+++ b/packages/react-components/src/styles/index.scss
@@ -2,5 +2,6 @@
 @import 'common/fill';
 @import 'common/stroke';
 @import 'common/color';
+@import 'common/base';
 
 @import '../components/Button/Button';
