feat(theme): Added typography variables

--- a/packages/react-components/src/styles/common/color.scss
+++ b/packages/react-components/src/styles/common/color.scss
@@ -1,3 +1,6 @@
+/**
+ * Color
+ */
 @each $name, $value in $palette {
   .color_#{$name} {
     color: rgb(red($value), green($value), blue($value));
