--- a/packages/react-components/src/styles/index.scss
+++ b/packages/react-components/src/styles/index.scss
@@ -3,5 +3,6 @@
 @import 'common/stroke';
 @import 'common/color';
 @import 'common/base';
+@import 'common/typography';
 
 @import '../components/Button/Button';
