chore(components): Updated typography styles/stories

--- a/packages/react-components/src/styles/common/base.scss
+++ b/packages/react-components/src/styles/common/base.scss
@@ -1,3 +1,34 @@
+/**
+ * Base classes
+ */
 .round_small {
-  border-radius: 2px;
+  border-radius: variable('borderRadius');
+}
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.align_left {
+  text-align: left;
+}
+
+.align_center {
+  text-align: center;
+}
+
+.align_right {
+  text-align: right;
+}
+
+.align_vertical {
+  &::before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    width: 0;
+  }
 }
