chore(components): Changed classnames module to another, export update

--- a/packages/react-components/src/styles/index.scss
+++ b/packages/react-components/src/styles/index.scss
@@ -3,6 +3,6 @@
 @import 'common/stroke';
 @import 'common/color';
 @import 'common/base';
-@import 'common/typography';
 
+@import '../components/Typography/Typography';
 @import '../components/Button/Button';
