--- a/packages/react-components/src/styles/index.scss
+++ b/packages/react-components/src/styles/index.scss
@@ -1,8 +1,3 @@
-@import 'common/palette';
-@import 'common/fill';
-@import 'common/stroke';
-@import 'common/color';
-@import 'common/base';
+@import 'base';
 
-@import '../components/Typography/Typography';
 @import '../components/Button/Button';
