--- a/packages/react-components/src/styles/_base.scss
+++ b/packages/react-components/src/styles/_base.scss
@@ -2,7 +2,7 @@
  * Base classes
  */
 .round_small {
-  border-radius: var(--pv-borderRadius);
+  border-radius: var(--pv-border-radius);
 }
 
 .ellipsis {
